--- a/.config
+++ b/.config
@@ -51,8 +51,8 @@ CONFIG_TARGET_mediatek_mt7622=y
 # CONFIG_TARGET_mediatek_mt7622_DEVICE_bananapi_bpi-r64 is not set
 # CONFIG_TARGET_mediatek_mt7622_DEVICE_buffalo_wsr-2533dhp2 is not set
 # CONFIG_TARGET_mediatek_mt7622_DEVICE_elecom_wrc-2533gent is not set
-CONFIG_TARGET_mediatek_mt7622_DEVICE_linksys_e8450=y
-# CONFIG_TARGET_mediatek_mt7622_DEVICE_linksys_e8450-ubi is not set
+# CONFIG_TARGET_mediatek_mt7622_DEVICE_linksys_e8450 is not set
+CONFIG_TARGET_mediatek_mt7622_DEVICE_linksys_e8450-ubi=y
 # CONFIG_TARGET_mediatek_mt7622_DEVICE_mediatek_mt7622-rfb1 is not set
 # CONFIG_TARGET_mediatek_mt7622_DEVICE_mediatek_mt7622-rfb1-ubi is not set
 # CONFIG_TARGET_mediatek_mt7622_DEVICE_ruijie_rg-ew3200gx-pro is not set
@@ -64,7 +64,7 @@ CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="mediatek"
 CONFIG_TARGET_SUBTARGET="mt7622"
-CONFIG_TARGET_PROFILE="DEVICE_linksys_e8450"
+CONFIG_TARGET_PROFILE="DEVICE_linksys_e8450-ubi"
 CONFIG_TARGET_ARCH_PACKAGES="aarch64_cortex-a53"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53"
 CONFIG_CPU_TYPE="cortex-a53"
